# sync-pyproject-nx-deps

./: .gitignore  .npmignore  AGENT.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml  publish.yml  release.yml
reference/: pyproject.toml
reference/python/package-a/: project.json  pyproject.toml
reference/python/package-a/package_a.egg-info/: PKG-INFO  SOURCES.txt
reference/python/package-b/: project.json  pyproject.toml
reference/python/package-b/package_b.egg-info/: PKG-INFO  SOURCES.txt
reference/python/package-c/: project.json  pyproject.toml
reference/python/package-c/package_c.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
reference/python/package-d/: project.json  pyproject.toml
reference/python/package-ee/: project.json  pyproject.toml
reference/python/package-ee/package_e.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
reference/python/package-f/: project.json  pyproject.toml
reference/python/quoted_package_name/: project.json  pyproject.toml
reference/python/quoted_package_name/quoted_package_name.egg-info/: PKG-INFO  SOURCES.txt
src/: cli.ts
src/lib/: mapper.test.ts  mapper.ts  parser.test.ts  parser.ts  scanner.ts  sync.ts  updater.test.ts  updater.ts
src/tests/: sync-deps.test.ts
